# the-eye

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  docker-compose.yml
.github/workflows/: CD-backend.yml  CI-backend.yml  CI-frontend.yml  CICD-Docker-Backend.yml  CICD.yml  _build-backend.yml  _lint-backend.yml  _test-backend.yml  ci-backend.yml
backend/: .dockerignore  .env.example  BACKEND.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  codecov.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/api/crud/: users.py
backend/app/api/dependencies/: authorization.py  database.py  journalists.py  publishers.py
backend/app/api/exceptions/: events.py  http_exc_400.py  http_exc_403.py  http_exc_404.py
backend/app/api/routes/: app_settings.py  articles.py  authentication.py  journalists.py  publishers.py  tags.py  users.py
backend/app/core/: config.py  events.py  logging.py
backend/app/core/settings/: app.py  app_base_settings.py  app_dev_settings.py  app_prod_settings.py  app_settings.py  app_test_settings.py  base.py  development.py  production.py  staging.py
backend/app/db/: database.py  errors.py  events.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 19b20050fc3e_create_users_table.py  a177683deb81_create_tables.py
backend/app/db/queries/: database.py  queries.py  tables.py
backend/app/db/queries/sql/: articles.sql  journalists.sql  publishers.sql  tags.sql  users.sql
backend/app/db/repositories/: articles.py  base.py  journalists.py  publishers.py  tags.py  users.py
backend/app/models/: base_models.py  db_models.py
backend/app/models/domain/: articles.py  base.py  header.py  journalists.py  publishers.py  users.py
backend/app/models/mixin_models/: id_mixin_models.py
backend/app/models/mixins/: date_time.py  identifier.py
backend/app/models/schemas/: articles.py  base.py  journalists.py  jwt.py  publishers.py  tags.py  users.py
backend/app/resources/: http_exc_details.py
backend/app/services/: authentication.py  config.py  jwt.py  security.py
backend/tests/: conftest.py  fake_asyncpg_pool.py  tables.py
backend/tests/integration_tests/test_api/test_routes/: test_authentication.py  test_journalists.py  test_publishers.py  test_users.py
backend/tests/integration_tests/test_models/test_domain/: test_users.py
backend/tests/integration_tests/test_services/: test_jwt.py
backend/tests/unit_tests/test_api/: test_app_settings.py  test_users.py
backend/tests/unit_tests/test_app/: test_app.py  test_main.py
backend/tests/unit_tests/test_core/: test_config.py
backend/tests/unit_tests/test_core/test_settings/: test_all_app_settings.py  test_app_base_settings.py  test_app_dev_settings.py  test_app_prod_settings.py  test_app_settings.py  test_app_test_settings.py
backend/tests/unit_tests/test_models/: test_base_models.py
backend/tests/unit_tests/test_models/test_domain/: test_base.py  test_users.py
backend/tests/unit_tests/test_models/test_mixin_models/: test_id_mixin_models.py  test_mixin_modles.py
backend/tests/unit_tests/test_models/test_mixins/: test_date_time.py  test_identifier.py
backend/tests/unit_tests/test_repositores/: test_authentication.py  test_errors.py  test_journalists.py  test_publishers.py  test_users.py
backend/tests/unit_tests/test_services/: test_authentication.py  test_config.py  test_jwt.py  test_security.py
docs/collaboration/: COLLABORATION.md
frontend/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Signup.pages.test.js  firebase.config.js  index.css
frontend/src/components/: Button.jsx  Header.jsx  HeadlineList.jsx
frontend/src/data/: news.js
frontend/src/pages/: ForgotPassword.jsx  Homepage.jsx  Login.jsx  Marketplace.jsx  Profile.jsx  Publish.jsx  Read.jsx  Register.jsx  Signup.jsx
frontend/src/shared/: Button.jsx
